--- a/styles/about.css
+++ b/styles/about.css
@@ -56,7 +56,7 @@
   border-radius: 100%;
 }
 /* xs */
-@media (max-width: 275px) {
+@media screen and (min-width: 200px) and (max-width: 768px) {
   .about {
     margin-left: 15px; /* Geringerer linker Rand */
   }
