--- a/styles/main.css
+++ b/styles/main.css
@@ -78,7 +78,7 @@
     width: 100%;
   }
 }
-@media (max-width: 600px) {
+@media (max-width: 200px) {
   .hero__title {
     animation: none;
   }
