--- a/styles/mobile-nav.css
+++ b/styles/mobile-nav.css
@@ -55,3 +55,8 @@
   margin-top: 30px;
   margin-left: 20px;
 }
+@media screen and (min-width: 200px) and (max-width: 768px) {
+  .left {
+    font-size: 12px;
+  }
+}
